Fixed larger images being cropped off on gallery views.

--- a/internal/theme/static/css/99-yarn.css
+++ b/internal/theme/static/css/99-yarn.css
@@ -309,8 +309,15 @@ nav.pagination-nav a {
 }
 
 figure {
+  margin-top: 1.5rem;
   padding: 1rem;
   border-radius: var(--border-radius);
+}
+
+figure img {
+  display: block;
+  margin: 0 auto;
+  max-height: 80vh;
 }
 
 figure, figcaption {
